Touched up the dynamics and Beta-Beta

--- a/Multi-Sim.ipynb
+++ b/Multi-Sim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -14,13 +14,13 @@
     "import dynamics as Sim\n",
     "%matplotlib inline\n",
     "\n",
-    "A = np.matrix('-10, -4; -3, -7')\n",
+    "A = np.matrix('-10, -2; -3, -7')\n",
     "B = np.matrix('16;16')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -29,7 +29,7 @@
     "\n",
     "sim1 = Sim.NC(A,B)\n",
     "data1 = sim1.run_simulation()\n",
-    "data1\n",
+    "\n",
     "sim2 = Sim.FC(A,B)\n",
     "data2 = sim2.run_simulation()\n",
     "\n",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -68,31 +68,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>9999</th>\n",
-       "      <td>0.597015</td>\n",
-       "      <td>1.014925</td>\n",
+       "      <td>0.70073</td>\n",
+       "      <td>0.992701</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.597015</td>\n",
-       "      <td>1.014925</td>\n",
+       "      <td>0.70073</td>\n",
+       "      <td>0.992701</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>3.564268</td>\n",
-       "      <td>7.210515</td>\n",
-       "      <td>10.774783</td>\n",
+       "      <td>4.910224</td>\n",
+       "      <td>6.898183</td>\n",
+       "      <td>11.808407</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         barx1     barx2  dx1  dx2        x1        x2  beta1  beta2  \\\n",
-       "9999  0.597015  1.014925    0    0  0.597015  1.014925      0      0   \n",
+       "        barx1     barx2  dx1  dx2       x1        x2  beta1  beta2        V1  \\\n",
+       "9999  0.70073  0.992701    0    0  0.70073  0.992701      0      0  4.910224   \n",
        "\n",
-       "            V1        V2  Social Welfare  \n",
-       "9999  3.564268  7.210515       10.774783  "
+       "            V2  Social Welfare  \n",
+       "9999  6.898183       11.808407  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -132,17 +132,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>9999</th>\n",
-       "      <td>0.484848</td>\n",
-       "      <td>0.900433</td>\n",
+       "      <td>0.564706</td>\n",
+       "      <td>0.941176</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.484848</td>\n",
-       "      <td>0.900433</td>\n",
+       "      <td>0.564706</td>\n",
+       "      <td>0.941176</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>3.660501</td>\n",
-       "      <td>7.42175</td>\n",
-       "      <td>11.082251</td>\n",
+       "      <td>4.783391</td>\n",
+       "      <td>7.263668</td>\n",
+       "      <td>12.047059</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -150,13 +150,13 @@
       ],
       "text/plain": [
        "         barx1     barx2  dx1  dx2        x1        x2  beta1  beta2  \\\n",
-       "9999  0.484848  0.900433    0    0  0.484848  0.900433      0      0   \n",
+       "9999  0.564706  0.941176    0    0  0.564706  0.941176      0      0   \n",
        "\n",
-       "            V1       V2  Social Welfare  \n",
-       "9999  3.660501  7.42175       11.082251  "
+       "            V1        V2  Social Welfare  \n",
+       "9999  4.783391  7.263668       12.047059  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -196,37 +196,69 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>9999</th>\n",
-       "      <td>0.597015</td>\n",
-       "      <td>1.014925</td>\n",
-       "      <td>-0.112166</td>\n",
-       "      <td>-0.114492</td>\n",
-       "      <td>0.484848</td>\n",
-       "      <td>0.900433</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3.74145</td>\n",
-       "      <td>7.340801</td>\n",
-       "      <td>11.082251</td>\n",
+       "      <td>0.70073</td>\n",
+       "      <td>0.992701</td>\n",
+       "      <td>-0.136024</td>\n",
+       "      <td>-0.051524</td>\n",
+       "      <td>0.564706</td>\n",
+       "      <td>0.941176</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.109267</td>\n",
+       "      <td>6.937792</td>\n",
+       "      <td>12.047059</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         barx1     barx2       dx1       dx2        x1        x2  beta1  \\\n",
-       "9999  0.597015  1.014925 -0.112166 -0.114492  0.484848  0.900433      1   \n",
+       "        barx1     barx2       dx1       dx2        x1        x2  beta1  beta2  \\\n",
+       "9999  0.70073  0.992701 -0.136024 -0.051524  0.564706  0.941176    1.0    1.0   \n",
        "\n",
-       "      beta2       V1        V2  Social Welfare  \n",
-       "9999      1  3.74145  7.340801       11.082251  "
+       "            V1        V2  Social Welfare  \n",
+       "9999  5.109267  6.937792       12.047059  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data3.tail(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f8e53429828>"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYEAAAEACAYAAABVtcpZAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFSxJREFUeJzt3X+QnVWd5/H3t9MhJCGBEAYkCTQIAcqUTCq7sJQyRUME\nIiuTcaqUXyIgC6nVCM4WK7DBIuuggsYShx/rUhIdiSwy6pRhdfmh2IU4ImGRYcAEApQhBEUghCUB\nkhi++8e9JJemO31pbz/3Juf9quqq+zx97nPOc5K6nz7n3Od5IjORJJWpq90NkCS1jyEgSQUzBCSp\nYIaAJBXMEJCkghkCklSwIUMgIm6MiOci4uHtlPmHiFgZEQ9FxMzWNlGSNFKaGQl8CzhxsF9GxAeB\ngzJzOjAP+EaL2iZJGmFDhkBm3gu8tJ0ic4Hv1Mv+Gtg9IvZpTfMkSSOpFWsCU4HVDdtr6vskSR3O\nhWFJKlh3C46xBtivYXtafd/bRIQ3KpKkYcjMGInjNhsCUf8ZyFLgU8D3IuIoYF1mPjfYgd68YV1m\n8vf3/D2L/mUR0yZOY9LYSYwZNYaIqFe4rbo39+1Mnvzhkxz0twe1uxkdwb7Yxr7Yxr7Y5qcf/+mI\nHXvIEIiIm4FeYHJEPA1cDuwCZGbekJk/iYiTIuIJYANwTjMV3/rordz66K08Nv8x9p2w7/DPYAe1\n8MmFLDxzYbub0RHsi23si23si23i4yP3h/CQIZCZpzdRZv47rfhr932Nqz5wVZEBIEmdoi0Lw89v\neJ7lLyzn+IOOb0f1HaG3t7fdTegY9sU29sU29kU1osqHykREZia3P3E7X/mXr/Czj/+ssrolaUcV\nEW1fGG6p5c8v5z17vacdVUuqwAEHHMCqVava3YwdTk9PD7/73e8qrbM9IfDCcma+y1sMSTurVatW\n4aNr37l2fBOyLWsCq//fanp272lH1ZKkBm0JgT9u+CP77ObthSSp3doSAs+tf459xhsCktRulYdA\nZvL8q8/zF+P/ouqqJYkDDzyQu+++u93N6BiVh8C619cxtnssu3bvWnXVklSZvr4+jjvuOPbYYw/e\n/e53t7s5g6o8BF587UUmj5tcdbWS1FJDfftp/PjxnHvuuSxatKiiFg1P5SHwysZXmLDLhKqrlaSt\n7r//fmbMmMHkyZM599xz2bRpE+vWrePkk09m7733ZvLkyZx88smsWbPthsjHHnssl112GUcffTTj\nx4/ngQceYL/99uPHP/4xABs2bGD69OksWbIEgCOOOIIzzjiDAw88sC3n2KzKQ2D9pvVMGGMISGqf\nm2++mbvuuosnn3ySxx57jCuuuILM5BOf+ASrV6/m6aefZty4ccyf/9bboi1ZsoRvfvObvPLKK8ya\nNYvFixdz3nnn8fzzz/OZz3yGWbNm8bGPfaxNZzU8lV8s9sqmV9htl92qrlZSB2nVNVHDvR7t05/+\nNFOmTAFgwYIFXHDBBXz+85/nwx/+MABjxozh0ksvZfbs2W9539lnn81hhx22dfv444/nIx/5CLNn\nz+all17i4YcfHl6D2qg9IwGng6SiZbbmZ7imTZu29XVPTw/PPvssr7/+OvPmzeOAAw5gjz324Jhj\njmHdunVvmfvfb7/93nas8847j0ceeYSzzz6bSZMmDb9RbdKWNQFHApLaafXqbY9FX7VqFVOmTGHR\nokWsXLmSZcuWsW7dOu655x7grQvA/W/r8MYbb3D++edz1llncf311/PUU09VcwItVH0IbHJhWFJ7\nXXfddaxZs4a1a9fyxS9+kVNOOYX169czduxYJk6cyNq1a1m4cOGQx/nCF75AV1cXixcv5qKLLuLM\nM898y9MTN27cyKZNm3jjjTfYuHEjmzdvHuEze+faMh3kSEBSu0QEp59+OieccAIHH3ww06dP57LL\nLuPCCy/k1VdfZa+99uJ973sfJ5100tve1+jBBx/k6quv5qabbiIiuPjii+nq6uLKK68E4J577mHs\n2LF86EMfYvXq1YwbN44TTzyxsvNsVuXPE/jsnZ9l0thJXHL0JZXVK6la9fvft7sZO5zB+m0knydQ\n+Ujg1c2vMm70uKqrlSQNoPIQ2LhlI2NGjam6WknSANoTAt2GgCR1gupD4E+OBCSpUzgSkKSCORKQ\npII5EpCkgjkSkKSCORKQVBQfL/lWjgQkaQQsWrSI9773vUycOJGDDjqoY58wVvnzBDZu2ejzhSXt\n8DLzbfcT6u+mm27i8MMP54knnuCEE05g//3356Mf/WhFLWxOe0YCTgdJaqMqHi950UUXMXPmTLq6\nujjkkEOYO3cuv/zlL9tyvtvjbSMkFacdj5f8xS9+wYwZM6o4vXek+ukgRwJS8eK/t+aGmHn58O5U\nWvXjJS+//HIyk3POOWdY7R1JbVkTcCQglW24H96tMtjjJS+88ELuuOOOrY+VXL9+/Vvm/gd7vOQ1\n11zDggULBny85LXXXsuSJUu49957GT169Mid1DC5JiCpOFU9XnLx4sV8+ctf5u6772bfffcdwTMa\nvspD4I18g+6uygcgkrRVFY+X/O53v8uCBQu466676OnpGeEzGr7KQ2BU16iqq5Skrap6vOTnPvc5\n1q5dyxFHHMGECROYOHEin/zkJys7z2Y19XjJiJgDXE0tNG7MzKv6/X4isATYHxgFfDUzvz3AcXLX\nK3bltQWvtaDpkjqVj5ccno58vGREdAHXAicCM4DTIuKwfsU+BTyamTOBY4GvRsSAcz5OBUlS52hm\nOuhIYGVmrsrMzcAtwNx+ZRKYUH89AXgxM/800MEMAUnqHM2EwFRgdcP2M/V9ja4F3hMRzwL/Clw4\n2MEMAUnqHK36RD4R+E1mHhcRBwF3RcThmbm+f8HX7nqNhRsWAtDb20tvb2+LmiBJO4e+vj76+voq\nqWvIheGIOApYmJlz6tuXANm4OBwR/xv4Umb+sr79M+DizHyg37Fy6len8sx/eabFpyGpk7gwPDwd\nuTAMLAMOjoieiNgFOBVY2q/MKuADABGxD3AI8BQDcDpIkjrHkJ/ImbklIuYDd7LtK6LLI2Je7dd5\nA3AF8O2IePPGGZ/NzLUDVmgISDu9np6eIW+zrLdrx0VlTV0n0LLKIvLQaw5lxfwVldUpSTu6dk8H\ntZQjAUnqHIaAJBXMewdJUsEcCUhSwQwBSSqYISBJBTMEJKlghoAkFaz6bweF3w6SpE7hSECSCmYI\nSFLBDAFJKpghIEkFMwQkqWDeO0iSClb9SCAcCUhSp6j8E7m7q5vbb4f77oPp0+HQQ2H33WH0aOju\nhh3hYUQ7QhslqRmVh8CmjaM44yw4/3y47TZYtAjWr4fNm2s/nc5nZ0vamVQeAn94tpv3vx++9KWq\na5akHdNIzj5Uvibw4otdzJxZda2SpIFUHgKvru9iypSqa5UkDaTyENiwoYt99626VknSQNoyEjAE\nJKkzVB4CG1/vYtKkqmuVJA2k8hDYtLGL8eOrrlWSNJDKQ2DzJkNAkjpF9SMBQ0CSOkYbHi/ZRbe3\nD5KkjlB5CIzurrxKSdIgKv9E3mW0ISBJnaINIeDzBCSpU1QfAk4HSVLHqH5heJQhIEmdog2PlzQE\nJKlTtOFB84aAJHWKpj6RI2JORKyIiMcj4uJByvRGxG8i4pGI+Plgx3I6SJI6x5CXbUVEF3AtMBt4\nFlgWET/KzBUNZXYHrgNOyMw1EbHXYMdzOkiSOkczn8hHAiszc1VmbgZuAeb2K3M68IPMXAOQmS8M\ndrBuRwKS1DGa+USeCqxu2H6mvq/RIcCeEfHziFgWEWcOdjDXBCSpc7TqLj7dwCzgOGA88KuI+FVm\nPtG/oGsCktQ5mgmBNcD+DdvT6vsaPQO8kJmvA69HxD3AXwJvC4Hf/9/bWLiw9vbe3l56e3uH0WxJ\n2nn19fXR19dXSV2RmdsvEDEKeIzawvDvgfuB0zJzeUOZw4BrgDnAGODXwCmZ+dt+x8q/umAx93z9\nnJaehCTtzCKCzIyROPaQI4HM3BIR84E7qa0h3JiZyyNiXu3XeUNmroiIO4CHgS3ADf0DYGuFrglI\nUsdoak0gM28HDu2373/2214ELBqyQu8dJEkdo/rnCbgwLEkdo/rbRhgCktQxqg+Bbp8nIEmdwukg\nSSqY00GSVDAfNC9JBfOhMpJUMENAkgpmCEhSwQwBSSqYISBJBTMEJKlghoAkFcwQkKSCGQKSVDBD\nQJIKZghIUsGqv4Fcl7eSlqRO4V1EJalgTgdJUsEMAUkqWPUh4HSQJHUMRwKSVDBDQJIK5reDJKlg\nbbhOwBCQpE7hSECSClb5J3JXV1RdpSRpEC4MS1LB2jAd5EhAkjqF00GSVLA2TAcZApLUKdpw2whD\nQJI6hSMBSSpY9QvD3X47SJI6hSMBSSpYUyEQEXMiYkVEPB4RF2+n3BERsTki/nbQCg0BSeoYQ4ZA\nRHQB1wInAjOA0yLisEHKXQncsb3jeZ2AJHWOZkYCRwIrM3NVZm4GbgHmDlDu08D3gT9u72BOB0lS\n52gmBKYCqxu2n6nv2yoipgB/k5n/A9jup7xfEZWkztGqheGrgca1gkE/6Q0BSeoc3U2UWQPs37A9\nrb6v0b8HbomIAPYCPhgRmzNzaf+D3XDtV9hnz3EA9Pb20tvbO5x2S9JOq6+vj76+vkrqiszcfoGI\nUcBjwGzg98D9wGmZuXyQ8t8CbsvMHw7wu3zkqReYceDkP7vhklSKiCAzR2QaZciRQGZuiYj5wJ3U\npo9uzMzlETGv9uu8of9btnc8F4YlqXMMORJoaWUR+fjTa5m+36TK6pSkHd1IjgQqv2J4tLeNkKSO\nUfkncm3tWJLUCbyVtCQVrPonizkSkKSO4eMlJalgjgQkqWCGgCQVzOkgSSqYIwFJKpgjAUkqWPUP\nmh/lFcOS1CmcDpKkgjkdJEkFcyQgSQVzJCBJBWvDXUSrrlGSNBhDQJIK5vc1JalghoAkFcwQkKSC\nGQKSVDBDQJIKZghIUsEMAUkqmCEgSQUzBCSpYIaAJBXMEJCkghkCklQwQ0CSCmYISFLBDAFJKpgh\nIEkFMwQkqWCGgCQVzBCQpII1FQIRMSciVkTE4xFx8QC/Pz0i/rX+c29EvLf1TZUktVpk5vYLRHQB\njwOzgWeBZcCpmbmiocxRwPLMfDki5gALM/OoAY6VQ9UnSXqriCAzYySO3cxI4EhgZWauyszNwC3A\n3MYCmXlfZr5c37wPmNraZkqSRkIzITAVWN2w/Qzb/5D/T8D/+XMaJUmqRncrDxYRxwLnAEcPVmbh\nwoVbX/f29tLb29vKJkjSDq+vr4++vr5K6mpmTeAoanP8c+rblwCZmVf1K3c48ANgTmY+OcixXBOQ\npHeo3WsCy4CDI6InInYBTgWW9mvg/tQC4MzBAkCS1HmGnA7KzC0RMR+4k1po3JiZyyNiXu3XeQPw\nOWBP4PqICGBzZh45kg2XJP35hpwOamllTgdJ0jvW7ukgSdJOyhCQpIIZApJUMENAkgpmCEhSwQwB\nSSqYISBJBTMEJKlghoAkFcwQkKSCGQKSVDBDQJIKZghIUsEMAUkqmCEgSQUzBCSpYIaAJBXMEJCk\nghkCklQwQ0CSCmYISFLBDAFJKpghIEkFMwQkqWCGgCQVzBCQpIIZApJUMENAkgpmCEhSwQwBSSqY\nISBJBTMEJKlghoAkFcwQkKSCGQKSVLCmQiAi5kTEioh4PCIuHqTMP0TEyoh4KCJmtraZkqSRMGQI\nREQXcC1wIjADOC0iDutX5oPAQZk5HZgHfGME2rpT6evra3cTOoZ9sY19sY19UY1mRgJHAiszc1Vm\nbgZuAeb2KzMX+A5AZv4a2D0i9mlpS3cy/gffxr7Yxr7Yxr6oRjMhMBVY3bD9TH3f9sqsGaCMJKnD\nuDAsSQWLzNx+gYijgIWZOae+fQmQmXlVQ5lvAD/PzO/Vt1cAx2Tmc/2Otf3KJEkDyswYieN2N1Fm\nGXBwRPQAvwdOBU7rV2Yp8Cnge/XQWNc/AGDkTkKSNDxDhkBmbomI+cCd1KaPbszM5RExr/brvCEz\nfxIRJ0XEE8AG4JyRbbYkqRWGnA6SJO28KlsYbuaCsx1ZREyLiLsj4tGI+LeIuKC+f1JE3BkRj0XE\nHRGxe8N7Lq1fYLc8Ik5o2D8rIh6u99XV7TifVoiIroh4MCKW1reL7IuI2D0i/ql+bo9GxH8ouC/+\nLiIeqZ/HdyNil1L6IiJujIjnIuLhhn0tO/d6X95Sf8+vImL/phqWmSP+Qy1sngB6gNHAQ8BhVdRd\n1Q/wLmBm/fVuwGPAYcBVwGfr+y8Grqy/fg/wG2pTcgfU++fNkdmvgSPqr38CnNju8xtmn/wdsARY\nWt8usi+AbwPn1F93A7uX2BfAFOApYJf69veAs0rpC+BoYCbwcMO+lp078J+B6+uvTwFuaaZdVY0E\nmrngbIeWmX/IzIfqr9cDy4Fp1M7zH+vF/hH4m/rrv6b2j/SnzPwdsBI4MiLeBUzIzGX1ct9peM8O\nIyKmAScB32zYXVxfRMRE4K8y81sA9XN8mQL7om4UMD4iuoGx1K4pKqIvMvNe4KV+u1t57o3H+j4w\nu5l2VRUCzVxwttOIiAOoJf59wD5Z/6ZUZv4B2LtebLAL7KZS65837ah99TXgvwKNi04l9sWBwAsR\n8a361NgNETGOAvsiM58Fvgo8Te28Xs7Mn1JgXzTYu4XnvvU9mbkFWBcRew7VAC8Wa7GI2I1aCl9Y\nHxH0X3nf6VfiI+I/As/VR0bb+1rwTt8X1Ibzs4DrMnMWtW/PXUKZ/y/2oPbXag+1qaHxEXEGBfbF\ndrTy3Jv6Sn5VIbAGaFykmFbft1OpD3G/D9yUmT+q737uzfso1Ydyf6zvXwPs1/D2N/tksP07kvcD\nfx0RTwH/CzguIm4C/lBgXzwDrM7MB+rbP6AWCiX+v/gA8FRmrq3/pfrPwPsosy/e1Mpz3/q7iBgF\nTMzMtUM1oKoQ2HrBWUTsQu2Cs6UV1V2lxcBvM/PrDfuWAmfXX58F/Khh/6n1Ff0DgYOB++tDwpcj\n4siICODjDe/ZIWTmf8vM/TPz3dT+re/OzDOB2yivL54DVkfEIfVds4FHKfD/BbVpoKMiYtf6OcwG\nfktZfRG89S/0Vp770voxAD4C3N1UiypcGZ9D7RszK4FL2rE6P8Ln935gC7VvPv0GeLB+znsCP62f\n+53AHg3vuZTaqv9y4ISG/f8O+Ld6X3293ef2Z/bLMWz7dlCRfQH8JbU/hB4Cfkjt20Gl9sXl9fN6\nmNoi5uhS+gK4GXgW2EgtEM8BJrXq3IExwK31/fcBBzTTLi8Wk6SCuTAsSQUzBCSpYIaAJBXMEJCk\nghkCklQwQ0CSCmYISFLBDAFJKtj/B07XO8Td5lT6AAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f8e534a2d30>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "data3[['barx1', 'barx2']].plot()"
    ]
   },
   {
@@ -241,21 +273,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
