--- a/Multi-Sim.ipynb
+++ b/Multi-Sim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -14,13 +14,13 @@
     "import dynamics as Sim\n",
     "%matplotlib inline\n",
     "\n",
-    "A = np.matrix('-10, -2; -3, -7')\n",
+    "A = np.matrix('-6, -2; -1, -5')\n",
     "B = np.matrix('16;16')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -68,31 +68,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>9999</th>\n",
-       "      <td>0.70073</td>\n",
-       "      <td>0.992701</td>\n",
+       "      <td>1.084746</td>\n",
+       "      <td>1.491525</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.70073</td>\n",
-       "      <td>0.992701</td>\n",
+       "      <td>1.084746</td>\n",
+       "      <td>1.491525</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>4.910224</td>\n",
-       "      <td>6.898183</td>\n",
-       "      <td>11.808407</td>\n",
+       "      <td>7.06004</td>\n",
+       "      <td>11.12324</td>\n",
+       "      <td>18.183281</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        barx1     barx2  dx1  dx2       x1        x2  beta1  beta2        V1  \\\n",
-       "9999  0.70073  0.992701    0    0  0.70073  0.992701      0      0  4.910224   \n",
+       "         barx1     barx2  dx1  dx2        x1        x2  beta1  beta2       V1  \\\n",
+       "9999  1.084746  1.491525    0    0  1.084746  1.491525      0      0  7.06004   \n",
        "\n",
        "            V2  Social Welfare  \n",
-       "9999  6.898183       11.808407  "
+       "9999  11.12324       18.183281  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -132,31 +132,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>9999</th>\n",
-       "      <td>0.564706</td>\n",
-       "      <td>0.941176</td>\n",
+       "      <td>1.009009</td>\n",
+       "      <td>1.297297</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.564706</td>\n",
-       "      <td>0.941176</td>\n",
+       "      <td>1.009009</td>\n",
+       "      <td>1.297297</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>4.783391</td>\n",
-       "      <td>7.263668</td>\n",
-       "      <td>12.047059</td>\n",
+       "      <td>7.41758</td>\n",
+       "      <td>11.032871</td>\n",
+       "      <td>18.45045</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         barx1     barx2  dx1  dx2        x1        x2  beta1  beta2  \\\n",
-       "9999  0.564706  0.941176    0    0  0.564706  0.941176      0      0   \n",
+       "         barx1     barx2  dx1  dx2        x1        x2  beta1  beta2       V1  \\\n",
+       "9999  1.009009  1.297297    0    0  1.009009  1.297297      0      0  7.41758   \n",
        "\n",
-       "            V1        V2  Social Welfare  \n",
-       "9999  4.783391  7.263668       12.047059  "
+       "             V2  Social Welfare  \n",
+       "9999  11.032871        18.45045  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -196,31 +196,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>9999</th>\n",
-       "      <td>0.70073</td>\n",
-       "      <td>0.992701</td>\n",
-       "      <td>-0.136024</td>\n",
-       "      <td>-0.051524</td>\n",
-       "      <td>0.564706</td>\n",
-       "      <td>0.941176</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.109267</td>\n",
-       "      <td>6.937792</td>\n",
-       "      <td>12.047059</td>\n",
+       "      <td>1.084746</td>\n",
+       "      <td>1.491525</td>\n",
+       "      <td>-0.049513</td>\n",
+       "      <td>-0.101048</td>\n",
+       "      <td>1.035233</td>\n",
+       "      <td>1.390478</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.499975</td>\n",
+       "      <td>7.18436</td>\n",
+       "      <td>11.21122</td>\n",
+       "      <td>18.395581</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        barx1     barx2       dx1       dx2        x1        x2  beta1  beta2  \\\n",
-       "9999  0.70073  0.992701 -0.136024 -0.051524  0.564706  0.941176    1.0    1.0   \n",
+       "         barx1     barx2       dx1       dx2        x1        x2  beta1  \\\n",
+       "9999  1.084746  1.491525 -0.049513 -0.101048  1.035233  1.390478    0.5   \n",
        "\n",
-       "            V1        V2  Social Welfare  \n",
-       "9999  5.109267  6.937792       12.047059  "
+       "         beta2       V1        V2  Social Welfare  \n",
+       "9999  0.499975  7.18436  11.21122       18.395581  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
